force-app/main/default/objects/DC_Power_Consumption__c/DC_Power_Consumption__c.object-meta.xml
<CustomObject>
    <label>Power Consumption</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Power Consumptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>