force-app/main/default/objects/DC_Power_Consumption__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Date and time of meter reading.</description>
    <label>Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>