force-app/main/default/objects/DC_Power_Consumption__c/fields/Device_Name__c.field-meta.xml
<CustomField>
    <fullName>Device_Name__c</fullName>
    <description>The name of the device drawing power. Ties back to the name of the record drawing power.</description>
    <label>Device Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>