force-app/main/default/objects/DC_Power_Consumption__c/fields/Device_Type__c.field-meta.xml
<CustomField>
    <fullName>Device_Type__c</fullName>
    <description>The type of device drawing power.</description>
    <label>Device Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Circuit Breaker</fullName>
            </value>
            <value>
                <fullName>DC Circuit</fullName>
            </value>
            <value>
                <fullName>PDU Panel</fullName>
            </value>
            <value>
                <fullName>DC Plant</fullName>
            </value>
            <value>
                <fullName>PDU RPP</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
            <value>
                <fullName>SwitchGear</fullName>
            </value>
            <value>
                <fullName>Non-IT Load</fullName>
            </value>
            <value>
                <fullName>Power Consumption</fullName>
            </value>
            <value>
                <fullName>Tenant Suite</fullName>
            </value>
            <value>
                <fullName>Tenant Power</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>