force-app/main/default/objects/DC_Power_Consumption__c/fields/kVA_Usage__c.field-meta.xml
<CustomField>
    <fullName>kVA_Usage__c</fullName>
    <description>Usage of this meter on this reading.</description>
    <label>kVA Usage</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>