force-app/main/default/objects/DC_Power_Consumption__c/fields/Meter_ID__c.field-meta.xml
<CustomField>
    <fullName>Meter_ID__c</fullName>
    <description>The unique identifier of the meter that is recording power. Ties back to a field on all power consuming objects for relation.</description>
    <label>Meter ID</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>